# YAGoL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  boolmatrix.hpp  lexical_cast.hpp  main.cpp  matrix.hpp  sparseboolmatrix.hpp  sparsematrix.hpp  yagol_allegro_main.cpp  yagol_allegro_view.cpp  yagol_allegro_view.hpp  yagol_controller.cpp  yagol_controller.hpp  yagol_curses_main.cpp  yagol_curses_view.cpp  yagol_curses_view.hpp  yagol_main.cpp  yagol_main.cpp.in  yagol_model.cpp  yagol_model.hpp  yagol_view.cpp  yagol_view.hpp
